// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnvilColor hsl 1`] = `
<DocumentFragment>
  <div
    class="css-r1a9t8-AnvilColor"
  >
    <div
      class="css-6bf4yd-CopyContainer"
      style="display: inline-block;"
    >
      <div
        class="css-vpy9k6-AnvilColor"
      >
        <div
          class="css-1yddlrm-AnvilColor"
        />
      </div>
    </div>
    <div
      class="css-j0busv-AnvilColor"
    >
      <h2
        class="css-1hzmewr-AnvilColor"
      >
        accent
      </h2>
      <div
        class="css-ydyxj0-AnvilColor"
      >
        HEX: #8c7873
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnvilColor hsla 1`] = `
<DocumentFragment>
  <div
    class="css-r1a9t8-AnvilColor"
  >
    <div
      class="css-6bf4yd-CopyContainer"
      style="display: inline-block;"
    >
      <div
        class="css-ta0yjv-AnvilColor"
      >
        <div
          class="css-1yddlrm-AnvilColor"
        />
      </div>
    </div>
    <div
      class="css-j0busv-AnvilColor"
    >
      <h2
        class="css-1hzmewr-AnvilColor"
      >
        accent
      </h2>
      <div
        class="css-ydyxj0-AnvilColor"
      >
        HEX: #8c7873
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnvilColor name 1`] = `
<DocumentFragment>
  <div
    class="css-r1a9t8-AnvilColor"
  >
    <div
      class="css-6bf4yd-CopyContainer"
      style="display: inline-block;"
    >
      <div
        class="css-o9uq3g-AnvilColor"
      >
        <div
          class="css-1yddlrm-AnvilColor"
        />
      </div>
    </div>
    <div
      class="css-j0busv-AnvilColor"
    >
      <h2
        class="css-1hzmewr-AnvilColor"
      >
        Critical
      </h2>
      <div
        class="css-ydyxj0-AnvilColor"
      >
        brand #f94d32
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnvilColor overview 1`] = `
<DocumentFragment>
  <div
    class="css-r1a9t8-AnvilColor"
  >
    <div
      class="css-6bf4yd-CopyContainer"
      style="display: inline-block;"
    >
      <div
        class="css-13tdddk-AnvilColor"
      >
        <div
          class="css-1yddlrm-AnvilColor"
        />
      </div>
    </div>
    <div
      class="css-j0busv-AnvilColor"
    >
      <h2
        class="css-1hzmewr-AnvilColor"
      >
        Brand
      </h2>
      <div
        class="css-ydyxj0-AnvilColor"
      >
        Blue400 #2270ee
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnvilColor palette 1`] = `
<DocumentFragment>
  <div
    class="css-1mhhg7b"
  >
    <div
      class="css-r1a9t8-AnvilColor"
    >
      <div
        class="css-6bf4yd-CopyContainer"
        style="display: inline-block;"
      >
        <div
          class="css-o9uq3g-AnvilColor"
        >
          <div
            class="css-1yddlrm-AnvilColor"
          />
        </div>
      </div>
      <div
        class="css-j0busv-AnvilColor"
      >
        <h2
          class="css-1hzmewr-AnvilColor"
        >
          Critical
        </h2>
        <div
          class="css-ydyxj0-AnvilColor"
        >
          Red400 #f94d32
        </div>
      </div>
    </div>
    <div
      class="css-r1a9t8-AnvilColor"
    >
      <div
        class="css-6bf4yd-CopyContainer"
        style="display: inline-block;"
      >
        <div
          class="css-6lpvq4-AnvilColor"
        >
          <div
            class="css-1yddlrm-AnvilColor"
          />
        </div>
      </div>
      <div
        class="css-j0busv-AnvilColor"
      >
        <h2
          class="css-1hzmewr-AnvilColor"
        >
          Warning
        </h2>
        <div
          class="css-ydyxj0-AnvilColor"
        >
          Yellow400 #ffc902
        </div>
      </div>
    </div>
    <div
      class="css-r1a9t8-AnvilColor"
    >
      <div
        class="css-6bf4yd-CopyContainer"
        style="display: inline-block;"
      >
        <div
          class="css-1e00yvt-AnvilColor"
        >
          <div
            class="css-1yddlrm-AnvilColor"
          />
        </div>
      </div>
      <div
        class="css-j0busv-AnvilColor"
      >
        <h2
          class="css-1hzmewr-AnvilColor"
        >
          Success
        </h2>
        <div
          class="css-ydyxj0-AnvilColor"
        >
          Green500 #18a761
        </div>
      </div>
    </div>
    <div
      class="css-r1a9t8-AnvilColor"
    >
      <div
        class="css-6bf4yd-CopyContainer"
        style="display: inline-block;"
      >
        <div
          class="css-13tdddk-AnvilColor"
        >
          <div
            class="css-1yddlrm-AnvilColor"
          />
        </div>
      </div>
      <div
        class="css-j0busv-AnvilColor"
      >
        <h2
          class="css-1hzmewr-AnvilColor"
        >
          Info
        </h2>
        <div
          class="css-ydyxj0-AnvilColor"
        >
          Blue400 #2270ee
        </div>
      </div>
    </div>
    <div
      class="css-r1a9t8-AnvilColor"
    >
      <div
        class="css-6bf4yd-CopyContainer"
        style="display: inline-block;"
      >
        <div
          class="css-l69ita-AnvilColor"
        >
          <div
            class="css-1yddlrm-AnvilColor"
          />
        </div>
      </div>
      <div
        class="css-j0busv-AnvilColor"
      >
        <h2
          class="css-1hzmewr-AnvilColor"
        >
          Border
        </h2>
        <div
          class="css-ydyxj0-AnvilColor"
        >
          Neutral60 #dfe0e1
        </div>
      </div>
    </div>
    <div
      class="css-r1a9t8-AnvilColor"
    >
      <div
        class="css-6bf4yd-CopyContainer"
        style="display: inline-block;"
      >
        <div
          class="css-5339h0-AnvilColor"
        >
          <div
            class="css-1yddlrm-AnvilColor"
          />
        </div>
      </div>
      <div
        class="css-j0busv-AnvilColor"
      >
        <h2
          class="css-1hzmewr-AnvilColor"
        >
          Accent
        </h2>
        <div
          class="css-ydyxj0-AnvilColor"
        >
          Neutral40 #f5f5f5
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnvilColor rgb 1`] = `
<DocumentFragment>
  <div
    class="css-r1a9t8-AnvilColor"
  >
    <div
      class="css-6bf4yd-CopyContainer"
      style="display: inline-block;"
    >
      <div
        class="css-12f9a1f-AnvilColor"
      >
        <div
          class="css-1ubch5a-AnvilColor"
        />
      </div>
    </div>
    <div
      class="css-j0busv-AnvilColor"
    >
      <h2
        class="css-1hzmewr-AnvilColor"
      >
        text
      </h2>
      <div
        class="css-ydyxj0-AnvilColor"
      >
        HEX: #000000
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnvilColor rgba 1`] = `
<DocumentFragment>
  <div
    class="css-r1a9t8-AnvilColor"
  >
    <div
      class="css-6bf4yd-CopyContainer"
      style="display: inline-block;"
    >
      <div
        class="css-1ntimi3-AnvilColor"
      >
        <div
          class="css-1ubch5a-AnvilColor"
        />
      </div>
    </div>
    <div
      class="css-j0busv-AnvilColor"
    >
      <h2
        class="css-1hzmewr-AnvilColor"
      >
        shadow
      </h2>
      <div
        class="css-ydyxj0-AnvilColor"
      >
        HEX: #000000
      </div>
    </div>
  </div>
</DocumentFragment>
`;
